# CodeBrain

./: .gitignore  README.md  pyproject.toml
.brain/: context.md
.spec/: CURRENT.md  brain-file-format.md
codebrain/: __init__.py  __main__.py  backend.py  backend.py.brain  brain_init.py  brain_scanner.py  brain_scanner.py.brain  server.py  verifier.py
codebrain/prompts/: brain_few_shot.md
tests/: test_brain_init.py  test_brain_scanner.py  test_server_verified.py  test_verifier.py
