[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebrain"
version = "0.1.0"
description = "Local LLM backend exposed to Claude Code via MCP — Claude Code offloader, not replacement"
authors = [{name = "Tschonsen"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
codebrain = "codebrain.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["codebrain"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
